# training-flask

./: .gcloudignore  Dockerfile  app.yaml  pyproject.toml  pyproject.toml.template  requirements.txt
.github/workflows/: ci.yml  gcp-deploy.yaml  ssh.yaml  vmdeploy.yaml
docs/: README.md  checklist.md  do.md  docker.md  gcp-components.md  gcp-create-project.md  gcp-service-account.md  macos-disable-quarantine.md  terraform.md
ngmapi/: __main__.py  app.py
scripts/: build_pip_package.sh  client-curl.sh  container-build.sh  container-run.sh  deploy_pip_package.sh  init.sh  pip-deploy.sh  run-dev-server.sh  run-unicorn.sh  start.sh
scripts/deployment/: deploy-ubuntu.sh  ngmapi.conf  ngmapi.service  prereqs.md  pyenv.sh
scripts/do/: db-list.sh  key-add.sh  key-list.sh  vm-create.sh  vm-list.sh
scripts/gcp/: install.sh
scripts/gcp/appengine/: deploy-app.sh
scripts/gcp/cloudrun/: deploy.sh
scripts/gcp/functions/: deploy.sh  main.py
scripts/terraform/: commands.md  main.tf  terraform.tfstate
scripts/tools/: getip.sh
tests/: test_add.py
