[project]
name = "ngmapi"
version = "0.0.4"
description = "Just a demo project"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["flask", "project"]
dependencies = [
    "Flask",
    "Jinja2",
    "MarkupSafe"
]

[project.urls]
Homepage = "https://github.com/ngmaibulat/training-flask"
Documentation = "https://github.com/ngmaibulat/training-flask"
Changes = "https://github.com/ngmaibulat/training-flask"

[project.scripts]
ngmapi = "ngmapi.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
